clean dependencies to be about to create jjy executable